--- a/translations/kangyur/placeholders/100-022_toh865-the_incantation_of_the_buddha_vairocana.xml
+++ b/translations/kangyur/placeholders/100-022_toh865-the_incantation_of_the_buddha_vairocana.xml
@@ -11,12 +11,13 @@
                 <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
                 <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
                 <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
+                <editor role="projectEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2022</date>
+                <edition>v 0.0.11 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.c">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-100-022"/>
                 <date/>
             </publicationStmt>
@@ -32,7 +33,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-22T14:03:20.4Z" user="admin">22/06/2023 14:03:20</note>
+                <note type="lastUpdated" date-time="2023-07-19T11:26:16.577Z" user="admin">19/07/2023 11:26:16</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-04-13T12:54:57.88Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-04-13T12:54:57.88Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T12:55:25.104Z" user="line-tofte">Auto (update-contributors)</note>
@@ -48,6 +49,9 @@
                 <note type="updated" update="text-version" value="0.0.8" date-time="2023-06-19T13:11:57.797Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2023-06-22T14:03:16.118Z" user="line-tofte">2.c</note>
                 <note type="updated" update="text-version" value="0.0.9" date-time="2023-06-22T14:03:16.118Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2023-06-29T13:51:11.686Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2023-07-19T11:26:12.275Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2023-07-19T11:26:12.275Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
