--- a/translations/kangyur/translations/050-003_toh112-the_white_lotus_of_compassion.xml
+++ b/translations/kangyur/translations/050-003_toh112-the_white_lotus_of_compassion.xml
@@ -35,7 +35,7 @@
         <sponsor ref="sponsors.xml#sponsor-8">anonymous</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.2.3 <date>2023</date>
+                <edition>v 1.2.2 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -73,7 +73,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-07-18T22:59:46.842Z" user="admin">18/07/2023 22:59:46</note>
+        <note type="lastUpdated" date-time="2023-07-19T11:35:16.025Z" user="admin">19/07/2023 11:35:16</note>
         <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-22T06:04:52.426Z" user="andreas">v 0.1.0</note>
         <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:12:23.349Z" user="mike">2.d</note>
         <note type="updated" update="text-version" value="0.1.1" date-time="2021-04-15T09:04:52.552Z" user="line-tofte">Auto (update-contributors)</note>
@@ -116,6 +116,7 @@
           <note type="updated" update="text-version" value="1.2.1" date-time="2023-07-18T18:30:39.33Z" user="john">Edits to introduction, text, and bibliography completed for now prior to announcement.</note>
           <note type="updated" update="text-version" value="1.2.2" date-time="2023-07-18T19:58:49.563Z" user="john">1.2.2</note>
           <note type="updated" update="text-version" value="1.2.3" date-time="2023-07-18T22:59:43.343Z" user="konchog">Several small fixes in the intro and just one comma added in biblio.</note>
+          <note type="updated" update="text-version" value="1.2.2" date-time="2023-07-19T11:35:13.031Z" user="john">1.2.2</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
