--- a/translations/kangyur/placeholders/101-008_toh953-the_incantation_of_vajrapani_the_yaksa_king.xml
+++ b/translations/kangyur/placeholders/101-008_toh953-the_incantation_of_vajrapani_the_yaksa_king.xml
@@ -11,12 +11,13 @@
                 <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
                 <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
                 <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
+                <editor role="projectEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2022</date>
+                <edition>v 0.0.11 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.c">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-101-008"/>
                 <date/>
             </publicationStmt>
@@ -32,7 +33,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-22T14:06:47.251Z" user="admin">22/06/2023 14:06:47</note>
+                <note type="lastUpdated" date-time="2023-07-19T12:45:20.359Z" user="admin">19/07/2023 12:45:20</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-04-13T12:57:36.464Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-04-13T12:57:36.464Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T12:58:00.359Z" user="line-tofte">Auto (update-contributors)</note>
@@ -48,6 +49,9 @@
                 <note type="updated" update="text-version" value="0.0.8" date-time="2023-06-19T13:14:22.936Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2023-06-22T14:06:42.956Z" user="line-tofte">2.c</note>
                 <note type="updated" update="text-version" value="0.0.9" date-time="2023-06-22T14:06:42.956Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2023-06-29T13:52:28.558Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2023-07-19T12:45:16.041Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2023-07-19T12:45:16.041Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
