--- a/translations/kangyur/placeholders/101-122_toh1066-incantation_of_the_supreme_stem_ornament.xml
+++ b/translations/kangyur/placeholders/101-122_toh1066-incantation_of_the_supreme_stem_ornament.xml
@@ -17,10 +17,10 @@
                 <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2019</date>
+                <edition>v 0.0.9 <date>2019</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.c">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-101-122"/>
                 <date/>
             </publicationStmt>
@@ -36,7 +36,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-22T14:07:45.749Z" user="admin">22/06/2023 14:07:45</note>
+                <note type="lastUpdated" date-time="2023-07-19T12:56:18.552Z" user="admin">19/07/2023 12:56:18</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-04-13T13:01:17.516Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T13:01:17.516Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-04-13T13:01:41.037Z" user="line-tofte">Auto (update-contributors)</note>
@@ -49,6 +49,8 @@
                 <note type="updated" update="text-version" value="0.0.7" date-time="2023-06-19T13:15:47.399Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2023-06-22T14:07:41.461Z" user="line-tofte">2.c</note>
                 <note type="updated" update="text-version" value="0.0.8" date-time="2023-06-22T14:07:41.461Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2023-07-19T12:56:14.241Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2023-07-19T12:56:14.241Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
