--- a/translations/kangyur/translations/087-011_toh505a,1059a-mantra_for_incanting_medicines.xml
+++ b/translations/kangyur/translations/087-011_toh505a,1059a-mantra_for_incanting_medicines.xml
@@ -4,31 +4,28 @@
         <teiHeader>
                 <fileDesc>
                         <titleStmt>
-                                <title type="mainTitle" xml:lang="Bo-Ltn">sman gtong ba’i tshe sman
-                                        la sngags kyi gdab pa</title>
-                                <title type="mainTitle" xml:lang="bo">སྨན་གཏོང་བའི་ཚེ་སྨན་ལ་སྔགས་ཀྱི་གདབ་པ།</title>
                                 <title type="mainTitle" xml:lang="en">A Mantra for Incanting
                                         Medicines When Administering Them</title>
-                                <title type="otherTitle" xml:lang="zh"/>
-                                <author ref="eft:team-55" role="translatorMain">Translated by
+                                <title type="mainTitle" xml:lang="bo">སྨན་གཏོང་བའི་ཚེ་སྨན་ལ་སྔགས་ཀྱི་གདབ་པ།</title>
+                                <title type="mainTitle" xml:lang="Bo-Ltn">sman gtong ba’i tshe sman
+                                        la sngags kyi gdab pa</title>
+                                <author role="translatorMain" ref="eft:team-55">Translated by
                                         Catherine Dalton<lb/>under the patronage and supervision of
                                         84000: Translating the Words of the Buddha</author>
-                                <author role="translatorEng" ref="eft:person-61">Catherine
-                                        Dalton</author>
-                                <editor role="projectEditor" ref="eft:person-50">Andreas
-                                        Doctor</editor>
-                                <editor role="copyEditor" ref="eft:person-249">Konchog
-                                        Norbu</editor>
-                                <editor role="projectEditor" ref="eft:person-74">Ryan
-                                        Damron</editor>
+                                <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
+                                <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
+                                <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
+                                <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
+                                <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
+                                <editor role="finalReviewer" ref="eft:person-250">Rory Lindsay</editor>
                                 <sponsor ref="sponsors.xml#sponsor-2">May, George, Likai and Lillian
                                         Gu</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 1.0.0 <date>2022</date>
                 </edition>
             </editionStmt>
-                        <publicationStmt status="2">
+                        <publicationStmt status="1.a">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name>
                                         is a global non-profit initiative to translate all the
@@ -50,7 +47,7 @@
                 <note>An early mistake in the assigning of UT numbers within the
                                         84000 project means that these ids diverge slightly from the
                                         standard logic.</note>
-                <date>2023-05-23</date>
+                <date>2023-07-24</date>
             </publicationStmt>
                         <sourceDesc>
                                 <bibl key="toh505a" type="text">
@@ -76,7 +73,7 @@
                         </sourceDesc>
                         <notesStmt>
                                 <note>Note: not identified in Toh.</note>
-                                <note type="lastUpdated" date-time="2023-05-30T14:07:05.481Z" user="admin">30/05/2023 14:07:05</note>
+                                <note type="lastUpdated" date-time="2023-07-24T12:48:58.356Z" user="admin">24/07/2023 12:48:58</note>
                                 <note type="updated" update="translation-status" value="4" date-time="2021-01-12T15:49:02.772Z" user="line-tofte">4</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-01-12T15:49:02.772Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-01-14T10:25:08.293Z" user="line-tofte">Auto
@@ -115,8 +112,12 @@
                                 <note type="updated" update="translation-status" value="2.b" date-time="2023-05-10T13:57:16.67Z" user="line-tofte">2.b</note>
                                 <note type="updated" update="text-version" value="0.0.17" date-time="2023-05-10T13:57:16.67Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
-                            <note type="updated" update="translation-status" value="2" date-time="2023-05-30T14:07:01.285Z" user="line-tofte">2</note>
-                            <note type="updated" update="text-version" value="0.0.2" date-time="2023-05-30T14:07:01.285Z" user="line-tofte">Auto (update-publication-status)</note>
+                                <note type="updated" update="translation-status" value="2" date-time="2023-05-30T14:07:01.285Z" user="line-tofte">2</note>
+                                <note type="updated" update="text-version" value="0.0.2" date-time="2023-05-30T14:07:01.285Z" user="line-tofte">Auto (update-publication-status)</note>
+                                <note type="updated" update="text-version" value="0.0.3" date-time="2023-05-30T14:07:40.233Z" user="line-tofte">Auto (update-contributors)</note>
+                            <note type="updated" update="text-version" value="0.0.4" date-time="2023-07-20T13:35:01.88Z" user="line-tofte">Auto (update-contributors)</note>
+                            <note type="updated" update="translation-status" value="1.a" date-time="2023-07-24T12:48:53.272Z" user="martina-cotter">1.a</note>
+                            <note type="updated" update="text-version" value="1.0.0" date-time="2023-07-24T12:48:53.272Z" user="martina-cotter">1.0.0</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -162,7 +163,11 @@
                                                 mantra to be used for incanting medicines. The text
                                                 itself does not mention the original source of the
                                                 mantra, but it may have been extracted from <title xml:lang="en">The Dhāraṇī of
-                                                        Vaiḍūryaprabha</title> (Toh 505), <ref rend="pending" target="http://read.84000.co/translation/toh505.html"/> where it appears as the final part of the
+                                                        Vaiḍūryaprabha</title> (Toh 505), <ref inst="untoggle following note and add detailes of translator, year and title" rend="pending" target="http://read.84000.co/translation/toh505.html"/>
+                                                <!--<note place="end" xml:id="">(2023), trans., <title xml:lang="en">
+                                                                  <ref target="https://read.84000.co/translation/toh505.html"></ref>
+                                                          </title>, Toh 505 (84000: Translating the Words of the Buddha).</note>-->
+                                                where it appears as the final part of the
                                                 longer dhāraṇī taught there. The short mantra
                                                 presented in <title xml:lang="en">Mantra for Incanting Medicines When Administering
                                                   Them</title> was later incorporated into the
@@ -261,8 +266,7 @@
                     </p>
                                         <milestone unit="chunk" xml:id="UT22084-087-011-12"/>
                                         <p tid="12">The present work lacks a Sanskrit title at the
-                                                beginning and a translator’s colophon at the end,
-                                                and like <title xml:lang="en">A Mantra for Incanting
+                                                beginning and a translator’s colophon at the end. It is possible that like <title xml:lang="en">A Mantra for Incanting
                                                   Medicines, Extracted From “Destroyer of the Great
                                                   Trichiliocosm”</title> (Toh 1059), <ref inst="untoggle comment for following note" rend="pending" target="http://read.84000.co/translation/toh1059.html"/>
                                                 <!--<note place="end" xml:id="UT22084-087-011-60">
@@ -447,7 +451,7 @@
                                         <bibl xml:id="UT22084-087-011-42">Meulenbeld, G. Jan. <title xml:lang="en">A
                                                 History of Indian Medical Literature, vol.
                                                 1A</title>. Groningen: Egbert Forsten,
-                                                1999-2002.</bibl>
+                                                1999–2002.</bibl>
                                         <bibl xml:id="UT22084-087-011-43">Murthy, K. R. Srikantha,
                                                 trans. <title xml:lang="en">Aṣṭāṅga Samgraha of Vāgbhaṭa, vol.
                                                         1</title>. Varanasi: Chaukhambha Orientalia,
@@ -508,7 +512,7 @@
                                                   bo, “(The) Lord,” was a renowned figure in the
                                                   history of Tibetan Buddhism famous for coming to
                                                   Tibet and revitalizing Buddhism there during the
-                                                  early eleventh century.</term>
+                                                  early eleventh-century.</term>
                                                 </gloss>
                     </item>
                                         <item>
@@ -547,11 +551,11 @@
                                                   <term xml:lang="Bo-Ltn">tshul khrims rgyal ba </term>
                                                   <term xml:lang="bo">ཚུལ་ཁྲིམས་རྒྱལ་བ།</term>
                                                 <term xml:lang="Sa-Ltn"/>
-                                                  <term type="definition">Prolific eleventh century
+                                                  <term type="definition">Prolific eleventh-century
                                                   Tibetan translator also known as Naktso Lotsawa
                                                   (<foreign xml:lang="Bo-Ltn">nag tsho lo tsā ba</foreign>). He was sent to India by
-                                                          Lhalama Yeshe-Ö (<foreign xml:lang="Bo-Ltn">lha bla ma ye shes ’od</foreign>), the king
-                                                  of Western Tibet, and his grand-nephew Changchub-Ö
+                                                          Lhalama Yeshé Ö (<foreign xml:lang="Bo-Ltn">lha bla ma ye shes ’od</foreign>), the king
+                                                  of Western Tibet, and his grand-nephew Jangchup Ö
                                                   (<foreign xml:lang="Bo-Ltn">byang chub ’od</foreign>) to invite Atiśa to Tibet.</term>
                                                 </gloss>
                     </item>
