--- a/translations/kangyur/placeholders/054-007_toh126-the_sutra_like_gold_dust.xml
+++ b/translations/kangyur/placeholders/054-007_toh126-the_sutra_like_gold_dust.xml
@@ -9,20 +9,21 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">gser gyi bye ma lta bu'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryasuvarṇavālukopama­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gser gyi bye ma lta bu zhes bya ba theg pa chen po'i mdo</title>
-                <author role="translatorMain" ref="eft:team-27"/>
-                <consultant role="dharmaMaster" ref="eft:person-173">Khenpo Kalsang Gyaltsen</consultant>
-                <author role="translatorEng" ref="eft:person-173">Khenpo Kalsang Gyaltsen</author>
-                <author role="translatorEng" ref="eft:person-175">Chodrungma Kunga Chodron</author>
-                <consultant role="projectManager" ref="eft:person-175">Chodrungma Kunga Chodron</consultant>
-                <editor role="projectEditor" ref="eft:person-422">George FitzHerbert</editor>
-                <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
+                <author role="translatorMain" xml:id="UT22084-054-007-1"/>
+                <consultant role="dharmaMaster" xml:id="UT22084-054-007-2">Khenpo Kalsang Gyaltsen</consultant>
+                <author role="translatorEng" xml:id="UT22084-054-007-3">Khenpo Kalsang Gyaltsen</author>
+                <author role="translatorEng" xml:id="UT22084-054-007-4">Chodrungma Kunga Chodron</author>
+                <consultant role="projectManager" xml:id="UT22084-054-007-5">Chodrungma Kunga Chodron</consultant>
+                <editor role="projectEditor" xml:id="UT22084-054-007-6">George FitzHerbert</editor>
+                <editor role="projectEditor" xml:id="UT22084-054-007-7">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2019</date>
+                <edition>v 0.0.9 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.f">
+            <publicationStmt>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-054-007"/>
                 <date/>
             </publicationStmt>
@@ -37,19 +38,48 @@
                     <idno source-id="O1JC114941JC11701" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-10T08:33:20.66Z" user="admin">10/01/2023 08:33:20</note>
-                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2022-11-09T15:38:30.759Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-11-09T15:38:30.759Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2022-11-24T13:29:43.308Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2022-11-24T13:29:43.308Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2022-11-24T13:31:13.683Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2022-12-09T09:43:57.012Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.f" date-time="2023-01-10T08:32:02.259Z" user="line-tofte">2.f</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2023-01-10T08:32:02.259Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.7" date-time="2023-01-10T08:33:15.144Z" user="line-tofte">Auto (update-contributors)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-054-007-8">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#line-tofte" when="2022-11-09T15:38:30.759Z" type="translation-status" status="2.h" xml:id="UT22084-054-007-9">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2022-11-09T15:38:30.759Z" type="text-version" status="0.0.2" xml:id="UT22084-054-007-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-11-24T13:29:43.308Z" type="translation-status" status="2.g" xml:id="UT22084-054-007-11">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2022-11-24T13:29:43.308Z" type="text-version" status="0.0.3" xml:id="UT22084-054-007-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-11-24T13:31:13.683Z" type="text-version" status="0.0.4" xml:id="UT22084-054-007-13">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-09T09:43:57.012Z" type="text-version" status="0.0.5" xml:id="UT22084-054-007-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-01-10T08:32:02.259Z" type="translation-status" status="2.f" xml:id="UT22084-054-007-15">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-01-10T08:32:02.259Z" type="text-version" status="0.0.6" xml:id="UT22084-054-007-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-01-10T08:33:15.144Z" type="text-version" status="0.0.7" xml:id="UT22084-054-007-17">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.8" xml:id="UT22084-054-007-18">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-04T09:18:17.343Z" type="translation-status" status="2.e" xml:id="UT22084-054-007-19">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-04T09:18:17.343Z" type="text-version" status="0.0.9" xml:id="UT22084-054-007-20">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
