--- a/translations/kangyur/placeholders/039-003_toh47-the_teaching_on_the_unfathomable_secrets_of_the_tathagatas.xml
+++ b/translations/kangyur/placeholders/039-003_toh47-the_teaching_on_the_unfathomable_secrets_of_the_tathagatas.xml
@@ -11,21 +11,22 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">tathāgatācintyaguhyanirdeśa</title>
                 <title type="otherTitle" xml:lang="zh">《如來不可思議秘密經》（大正藏：《大寶積經密迹金剛力士會第三》）</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa de bzhin gshegs pa'i gsang ba bsam gyis mi khyab pa bstan pa zhes bya ba theg pa chen po'i mdo</title>
-                <author role="translatorMain" ref="eft:team-9">Dharmachakra Translation Committee</author>
-                <consultant role="dharmaMaster" ref="eft:person-40">Chökyi Nyima Rinpoche</consultant>
-                <author role="translatorEng" ref="eft:person-75">Timothy Hinkle</author>
-                <author role="translatorEng" ref="eft:person-50">Andreas Doctor</author>
-                <consultant role="advisor" ref="eft:person-116">Ulrich Pagel</consultant>
-                <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
-                <editor role="projectEditor" ref="eft:person-411">David Fiordalis</editor>
-                <sponsor ref="sponsors.xml#sponsor-7">Leo Tong Chen and his family</sponsor>
+                <author role="translatorMain" xml:id="UT22084-039-003-1">Dharmachakra Translation Committee</author>
+                <consultant role="dharmaMaster" xml:id="UT22084-039-003-2">Chökyi Nyima Rinpoche</consultant>
+                <author role="translatorEng" xml:id="UT22084-039-003-3">Timothy Hinkle</author>
+                <author role="translatorEng" xml:id="UT22084-039-003-4">Andreas Doctor</author>
+                <consultant role="advisor" xml:id="UT22084-039-003-5">Ulrich Pagel</consultant>
+                <consultant role="projectManager" xml:id="UT22084-039-003-6">Andreas Doctor</consultant>
+                <editor role="projectEditor" xml:id="UT22084-039-003-7">David Fiordalis</editor>
+                <sponsor xml:id="UT22084-039-003-8">Leo Tong Chen and his family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2019</date>
+                <edition>v 0.0.9 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.f">
+            <publicationStmt>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-039-003"/>
                 <date/>
             </publicationStmt>
@@ -40,18 +41,48 @@
                     <idno source-id="O1JC114941JC11573" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-17T09:18:21.499Z" user="admin">17/03/2023 09:18:21</note>
-                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T12:58:19.044Z" user="mike">2.h</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-29T15:57:01.899Z" user="cabie-sim">Auto (update-titles)</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2022-08-09T09:02:49.463Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2022-08-09T09:02:49.463Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2022-08-09T09:03:33.081Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2022-08-09T09:04:14.061Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.f" date-time="2023-03-17T09:18:17.251Z" user="line-tofte">2.f</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2023-03-17T09:18:17.251Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-039-003-9">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#mike" when="2020-01-27T12:58:19.044Z" type="translation-status" status="2.h" xml:id="UT22084-039-003-10">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-06-29T15:57:01.899Z" type="text-version" status="0.0.2" xml:id="UT22084-039-003-11">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-08-09T09:02:49.463Z" type="translation-status" status="2.g" xml:id="UT22084-039-003-12">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2022-08-09T09:02:49.463Z" type="text-version" status="0.0.3" xml:id="UT22084-039-003-13">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-08-09T09:03:33.081Z" type="text-version" status="0.0.4" xml:id="UT22084-039-003-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-08-09T09:04:14.061Z" type="text-version" status="0.0.5" xml:id="UT22084-039-003-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-17T09:18:17.251Z" type="translation-status" status="2.f" xml:id="UT22084-039-003-16">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-17T09:18:17.251Z" type="text-version" status="0.0.6" xml:id="UT22084-039-003-17">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-17T09:18:44.74Z" type="text-version" status="0.0.7" xml:id="UT22084-039-003-18">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.8" xml:id="UT22084-039-003-19">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-07T09:33:34.428Z" type="translation-status" status="2.d" xml:id="UT22084-039-003-20">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-07T09:33:34.428Z" type="text-version" status="0.0.9" xml:id="UT22084-039-003-21">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
